somewhat finished home, added footer

--- a/paulhub/templates/base.html
+++ b/paulhub/templates/base.html
@@ -18,10 +18,14 @@
     <header>
       {% include "_navigation.html" %}
     </header>
-    <br><br><br><br><br>
+    <br>
     {% block content %}
-      <h1>Very good site this is, very recommendable.</h1>
+      <h1>To my defense, I don't have unlimited time. Well, I do, but I'm lazy. WORK IN PROGRESSSS!</h1>
     {% endblock content %}
+    <br><br><br>
+    <footer>
+      {% include "_footer.html" %}
+    </footer>
   </div>
 </body>
 </html>
