--- a/paulhub/templates/home.html
+++ b/paulhub/templates/home.html
@@ -22,15 +22,43 @@
       font-size: calc(24px + .5vw);
     }
   </style>
+
+  <br><br><br><br>
+
   <h2>Trending 📈</h2>
   <div class="container flex-row-justified">
-    {% for image, text in trending %}
+    {% for image, text in month_data.trending %}
     <div style="font-size: 30px", id="limit-300">
       <img src="/static/{{ image.name }}" width="300" height="300" class="d-inline-block align-top" alt="{{ image.alt }}">
       <a href="{{ url_for(text.func) }}">{{ text.text }}</a>
     </div>
     {% endfor %}
   </div>
+
+  <br><br><br><br>
+
+  <h2>Latest ✨</h2>
+  <div class="container flex-row-justified">
+    {% for image, text in month_data.latest %}
+    <div style="font-size: 30px", id="limit-300">
+      <img src="/static/{{ image.name }}" width="300" height="300" class="d-inline-block align-top" alt="{{ image.alt }}">
+      <a href="{{ url_for(text.func) }}">{{ text.text }}</a>
+    </div>
+    {% endfor %}
+  </div>
+
+  <br><br><br><br>
+
+  <h2>Recommendations 🎖️</h2>
+  <div class="container flex-row-justified">
+    {% for image, text in month_data.recommendations %}
+    <div style="font-size: 30px", id="limit-300">
+      <img src="/static/{{ image.name }}" width="300" height="300" class="d-inline-block align-top" alt="{{ image.alt }}">
+      <a href="{{ url_for(text.func) }}">{{ text.text }}</a>
+    </div>
+    {% endfor %}
+  </div>
+
 </div>
 
 {% endblock content %}
