added legal pages, finished images

--- a/paulhub/static/style.css
+++ b/paulhub/static/style.css
@@ -1,16 +1,6 @@
-/*
-Reset script
-UNUSED - MAKES THINGS LOOK WEIRD
-Probably I'm just too dumb to use it correctly
-Have a nice day!
-*/
-
-* {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    background: transparent;
+div.solo-text {
+  padding-left: 40px;
+  padding-right: 40px;
+  margin: auto;
+  font-size: 20px;
 }
