--- a/paulhub/templates/pp.html
+++ b/paulhub/templates/pp.html
@@ -4,7 +4,7 @@
 
 <br><br><br>
 <div class="solo-text">
-  <p>Crazy dude(s) doing weird stuff. Contact us <a href="{{ url_for('contact') }}">here</a>.</p>
+  <p>We don't collect any data. Premium memberships are stored using persistent cookies.</p>
 </div>
 
 {% endblock content %}
