--- a/paulhub/templates/_footer.html
+++ b/paulhub/templates/_footer.html
@@ -2,6 +2,6 @@
   <br>
   <h3 style="text-align: center;">Thanks for watching!</h3>
   <p class="text-center" style="text-align: center;">© 2023 PaulHub</p>
-  <p class="text-center" style="text-align: center;"><a href="{{ url_for('about') }}">TOS</a>&nbsp;⋅ <a href="{{ url_for('about') }}">Privacy Policy</a>&nbsp;⋅ <a href="{{ url_for('about') }}">About</a>&nbsp;⋅ <a href="{{ url_for('about') }}">Contact</a></p>
+  <p class="text-center" style="text-align: center;"><a href="{{ url_for('tos') }}">TOS</a>&nbsp;⋅ <a href="{{ url_for('pp') }}">Privacy Policy</a>&nbsp;⋅ <a href="{{ url_for('about') }}">About</a>&nbsp;⋅ <a href="{{ url_for('contact') }}">Contact</a></p>
   <br>
 </div>
