--- a/paulhub/templates/base.html
+++ b/paulhub/templates/base.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link href="static/dark-theme.css" rel="stylesheet" id="dark-theme-link">
+  <link href="static/style.css" rel="stylesheet" id="style-link">
   <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
   <title>PaulHub - {% block title %}{{ title }}{% endblock title %}</title>
 </head>
