--- a/paulhub/templates/contact.html
+++ b/paulhub/templates/contact.html
@@ -4,7 +4,7 @@
 
 <br><br><br>
 <div class="solo-text">
-  <p>Crazy dude(s) doing weird stuff. Contact us <a href="{{ url_for('contact') }}">here</a>.</p>
+  <p>Email: <a href="mailto:Support@PaulHub.domain">Support@PaulHub.domain</a></p>
 </div>
 
 {% endblock content %}
