--- a/paulhub/templates/tos.html
+++ b/paulhub/templates/tos.html
@@ -4,7 +4,7 @@
 
 <br><br><br>
 <div class="solo-text">
-  <p>Crazy dude(s) doing weird stuff. Contact us <a href="{{ url_for('contact') }}">here</a>.</p>
+  <p>Don't cry.</p>
 </div>
 
 {% endblock content %}
