refactored, added personal stuff

--- a/paulhub/templates/_navigation.html
+++ b/paulhub/templates/_navigation.html
@@ -132,7 +132,7 @@
     }
     </style>
       <button id="myBtn" style="background-color: #242424; border: 1px solid #000000; border-radius: 4px;">
-          <img src="static/menu.png" alt="Open Navigation Menu" width="40px" height="40px">
+          <img src="/static/menu.png" alt="Open Navigation Menu" width="40px" height="40px">
       </button>
     <!-- The Modal -->
     <div id="myModal" class="modal">
