--- a/paulhub/templates/pages/personal_stuff.html
+++ b/paulhub/templates/pages/personal_stuff.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 
 <style>
 table {
@@ -35,16 +36,16 @@ div.personal-stuff-table-img-div {
 <div class='child inline-block-child'>
   <table>
     <tr>
-      <th>Name</th>
-      <th>Jürgen</th>
+      <td>Name</th>
+      <td>Hans</th>
     </tr>
     <tr>
       <td>Surname</td>
-      <td>Hans</td>
+      <td>Jürgen</td>
     </tr>
     <tr>
       <td>Age</td>
-      <td>Jackson</td>
+      <td>\( \frac{\sqrt[1]{\\log{((\sqrt[3]{8} \cdot 5)^{\sqrt{8046.09}})}}}{1.3} \)</td>
     </tr>
     <tr>
       <td>Address</td>
