added premium bar

--- a/paulhub/templates/base.html
+++ b/paulhub/templates/base.html
@@ -5,7 +5,6 @@
   <link href="/static/dark-theme.css" rel="stylesheet" id="dark-theme-link">
   <link href="/static/style.css" rel="stylesheet" id="style-link">
   <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
-  <script src="/static/create_premium_bar.js"></script>
   <title>PaulHub - {% block title %}{{ title }}{% endblock title %}</title>
   <style>
     html * {
@@ -17,7 +16,7 @@
 <body>
   <style>
     div.content {
-      width: 1000px;
+      width: 960px;
       margin: auto;
     }
   </style>
@@ -25,10 +24,15 @@
     <header>
       {% include "_navigation.html" %}
     </header>
+    <div>
+      {% include "premium/_premium_bar.html" %}
+    </div>
     <script>
-      setTimeout(createPremiumBar, 1000);
+      setTimeout(() => {
+        let popup = document.getElementById("premiumBar");
+        popup.classList.toggle("show");
+      }, 10000)
     </script>
-    <div id="premiumBar"></div>
     <br>
     {% block content %}
       <h1>To my defense, I don't have unlimited time. Well, I do, but I'm lazy. WORK IN PROGRESSSS!</h1>
