--- a/paulhub/static/style.css
+++ b/paulhub/static/style.css
@@ -4,3 +4,11 @@ div.solo-text {
   margin: auto;
   font-size: 20px;
 }
+.not-selectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
