--- a/paulhub/templates/premium/_premium_bar.html
+++ b/paulhub/templates/premium/_premium_bar.html
@@ -13,7 +13,7 @@
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(119,0,255,1) 74%, rgba(0,212,255,1) 100%);
     border-radius: 0px 0px 10px 10px;
   }
-  h2 {
+  h2.premium-bar-text {
     text-align: center;
     text-size-adjust: auto;
     font-size: calc(12px + .5vw);
@@ -50,7 +50,7 @@
 
 <div class="popup">
   <div id="premiumBar" class="popuptext container flex-row justify-horizontally-premium-bar premium-gradient">
-    <a href="/premium"><h2>Buy PaulHub Premium!</h2></a>
+    <a class="theme" href="/premium"><h2 class="premium-bar-text">Buy PaulHub Premium!</h2></a>
     <button id="premiumBarCloseBtn" onclick="hideTimeoutPremiumBar(20000)" style="background: none; border: none; border-radius: 4px; width: 35px; height: 35px; text-align: center; padding-top: 5px;">
         <img src="/static/cross.png" alt="Close Popup" width=18 height=18>
     </button>
