--- a/paulhub/templates/premium/premium.html
+++ b/paulhub/templates/premium/premium.html
@@ -5,36 +5,92 @@
 <br><br><br>
 <style>
   div.premiumDiv {
-    width: 90%;
+    margin: 0;
+    border-radius: 30px;
     padding-left: 60px;
     padding-right: 60px;
-    border-width: 2px;
-    border-style: solid;
-    border-color: linear-gradient(
-        45deg,
-        rgba(255, 0, 0, 1) 0%,
-        rgba(255, 154, 0, 1) 10%,
-        rgba(208, 222, 33, 1) 20%,
-        rgba(79, 220, 74, 1) 30%,
-        rgba(63, 218, 216, 1) 40%,
-        rgba(47, 201, 226, 1) 50%,
-        rgba(28, 127, 238, 1) 60%,
-        rgba(95, 21, 242, 1) 70%,
-        rgba(186, 12, 248, 1) 80%,
-        rgba(251, 7, 217, 1) 90%,
-        rgba(255, 0, 0, 1) 100%
+    padding-top: 20px;
+    padding-bottom: 60px;
+  }
+  .premium-div-border-wrap {
+    max-width: 70%;
+    border-radius: 32px;
+    margin: auto;
+    padding: 4px;
+    position: relative;
+    background: linear-gradient(
+      45deg,
+      rgba(255, 0, 0, 1) 0%,
+      rgba(255, 154, 0, 1) 10%,
+      rgba(208, 222, 33, 1) 20%,
+      rgba(79, 220, 74, 1) 30%,
+      rgba(63, 218, 216, 1) 40%,
+      rgba(47, 201, 226, 1) 50%,
+      rgba(28, 127, 238, 1) 60%,
+      rgba(95, 21, 242, 1) 70%,
+      rgba(186, 12, 248, 1) 80%,
+      rgba(251, 7, 217, 1) 90%,
+      rgba(255, 0, 0, 1) 100%
     );
-    border-radius: 20px;
+  }
+  h2.premium-page-header {
+    font-size: 42px;
+    background: linear-gradient(270deg, rgba(0,134,255,1) 0%, rgba(192,0,255,1) 50%, rgba(255,209,0,1) 100%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  p.premium-checkmarks {
+    font-size: 22px;
+  }
+  h2.premium-page-price {
+    font-size: 52px;
+  }
+  span.cross {
+    position: relative;
+    display: inline-block;
+  }
+  span.cross:after,
+  span.cross:before {
+    position: absolute;
+    content: '';
+    top: 50%;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    background: red;
+  }
+  span.cross:before {
+    transform: rotate(25deg);
+  }
+  span.cross:after {
+    transform: rotate(-25deg);
+  }
+  a.buy-btn {
+    background-color: rgb(0, 94, 201);
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 5px;
+    padding-bottom: 7px;
+    border-radius: 15px;
+    font-size: 36px;
   }
 </style>
-<div class="premiumDiv">
-  &#10003;xef eth h hheher5 hhh h
-  &#10003;
-  &#10003; h 
-  &#10003;
-  &#10003;
-  &#10003;h  htthe
-  &#10003;
+<div class="premium-div-border-wrap">
+  <div class="premiumDiv">
+    <h2 class="premium-page-header">Buy PaulHub Premium!</h2>
+    <br>
+    <p class="premium-checkmarks">
+      &#10003; Remove Popup<br>
+      &#10003; Support PaulHub team<br><br>
+    </p>
+    <h2 class="premium-page-price">
+      Only <span class="cross">69€</span> 9.99€!
+    </h2>
+    <br>
+    <div style="display: flex; justify-content: center;">
+      <a class="buy-btn" href="https://example.com" target="_blank">Buy now</a>
+    </div>
+  </div>
 </div>
 
 {% endblock content %}
