--- a/paulhub/templates/home.html
+++ b/paulhub/templates/home.html
@@ -53,7 +53,7 @@
 
   <br><br><br><br>
 
-  <h2 class="home-heading">Recommendations 🎖️</h2>
+  <h2 class="home-heading">Featured 🎖️</h2>
   <div class="container flex-row-justified">
     {% for image, text in month_data.recommendations %}
     <div style="font-size: 26px", id="limit-284">
