--- a/paulhub/static/style.css
+++ b/paulhub/static/style.css
@@ -12,3 +12,13 @@ div.solo-text {
   -ms-user-select: none;
   user-select: none;
 }
+html { height: 100%; }
+body {
+    min-height: 98%;
+    position: relative;
+}
+footer { 
+    position: absolute;
+    bottom: 0;
+    width: 960px;
+}
