--- a/paulhub/templates/premium/premium.html
+++ b/paulhub/templates/premium/premium.html
@@ -5,6 +5,7 @@
 <br><br><br>
 <style>
   div.premiumDiv {
+    position: relative;
     margin: 0;
     border-radius: 30px;
     padding-left: 60px;
@@ -37,7 +38,6 @@
     font-size: 42px;
     background: linear-gradient(270deg, rgba(0,134,255,1) 0%, rgba(192,0,255,1) 50%, rgba(255,209,0,1) 100%);
     background-clip: text;
-    -webkit-text-fill-color: transparent;
   }
   p.premium-checkmarks {
     font-size: 22px;
@@ -92,5 +92,7 @@
     </div>
   </div>
 </div>
+<div style="height: 200px; position: relative;"></div>
+<span id="doNotAddHeight"></span>
 
 {% endblock content %}
