Updated manifest of haunted spectre of communism

--- a/paulhub/templates/pages/opinion_why_communism_is_better_for_us.html
+++ b/paulhub/templates/pages/opinion_why_communism_is_better_for_us.html
@@ -59,6 +59,60 @@
     <br><br><br>
     One of the haunted spectre's biggest dreams is to be real. Really real. Not a symbol of good politics. Will this dream ever be fulfilled? Kennedy
     decides. Just blame it all on him. It's alright.
+    <br><br><br>
+    Do you also see colors every now and then? I'm sure the haunted spectre does not. It sees everything in black and white. Just like me when I take my
+    12mm long pills with a radius of 3mm. I wonder how I even know these values. Are they even values? Because they don't feel valuable. To be fair, nothing
+    feels valuable right now. Although “right now” might not be broad enough. But is there anything broad enough? Who knows. What I know for sure is the
+    existence of my hearth's beat rate. It's unknown. Never trust a capitalist.
+    <br><br><br>
+    What is even capitalism? Some people treat it as the opposite of communism. Might not even be totally wrong. Workers are always either okay, depressed
+    or anything in between. What a contrast.
+    <br><br><br>
+    The problem with true communism is, that humanity has never seen it. But is that an actual problem? In fact, nothing bad ever happened in a truly
+    communistic region. Not even a war, which might be good or bad.
+    <br><br><br>
+    I think, I'm hearing something. Probably just the wind. Or, it's the sussy sand and gravel falling apart upon me. I never understood why the water is
+    so cold. It just doesn't make sense.
+    <br><br><br>
+    Where am I whiffing again? I probably dreamed too much lately. You might be able to ignore the haunted spectre, but you'll never escape the smell of
+    fresh bread, produced by the capitalists drones. Who can afford bread if they don't have a job? Answer: It doesn't matter. Nothing matters. Funny, I
+    just thought about writing what I just wrote. Probably a side effect of the pills. Weird, they taste different every day. Is that normal? Is anything
+    normal? What is even normal. Also, to all the search engine developers: STOP TELLING ME THE SUICIDE HOTLINE NUMBER! I'm fine with dreaming to call that.
+    Not that I ever did that but...<br>
+    Actually I should probably stop the cake. Birds have been replaced anyways. Hope that makes sense.
+    <br><br><br>
+    I've made a huge personal achievement. That's something the haunted spectre could never say. And me neither. Did you ever hold money in your hand?
+    Did it feel good? No! There is no money. We got bread. No need for anything else. What can a government do for us? We got tools. Why would we need someone
+    to work for? We can work for ourselves. If you have any concerns, feel free to  contact me in my dreams. Many accomplished that before. Even when I was
+    awake.
+    <br><br><br>
+    I'm hearing music. The music of communism. Am I hallucinating? NO! THE COMMUNISM IS REAL. The haunted spectre waits day for day, hoping to be saved. But
+    that will never happen. All that only because James Kennedy flew into the towers. Poor spectre. Haunted spectre*. No, it's actually Europe's fault. They
+    haunt the haunted spectre. Such evil capitalists.
+    <br><br><br>
+    Do you want to save the world? Vote for us. Who is us? I don't know. Just vote, it doesn't matter. Nothing matters. I'm becoming repetitive. You know
+    what else is repetitive? Live as a capitalist. How ironic. Why ironic? Because Tomato. So juicy. Not delicious but that's ok. Anything can be fixed.
+    Except democracy. Although we didn't want to talk about demons.
+    <br><br><br>
+    I'm starting to think clearer. Not. The ultimate communism doesn't have a government. Workers are very capable of deciding things themselves. There's
+    also no money. We don't need extra weight to carry. Bread is enough. Did I say “we”? I don't have a job. Did you know that we don't need a police.
+    Get a gun. To harvest your wheat. Nothing else. When Karl Marx said, we can't have religion he didn't know about the flying spaghetti monster. We have
+    to adopt it as THE only official religion. Everyone not following this approach has to be <s>elim</s> told the truth. Do you know anyone fighting against
+    communism? You don't need to hurt them, but you should. Remember, a communist never punches a capitalist. Kicking is meta.
+    <br><br><br>
+    The voices are getting louder. They tell the haunted spectre to start a revolution against the European Union and for communism. Peaceful.
+    <br><br><br>
+    It's unbelievable that democracy is still real. So many bad things happened. Not a single bad thing ever happened in a truly communistic area. Does that
+    make any sense? The world is weird. Funny though, everyone always calls me by that. I should start a petition against democracy. Problem is, that democracy
+    would have to accept it. How fair. I'm starting to recognize the haunted spectre's reasons to be depressed. I might be sharing them.
+    <br><br><br>
+    We should start talking about the ideal language for a communistic world. Many factors have to be considered. Did I hear factor? Many people don't understand
+    math. They should just get a job. Which is way easier in a communistic community, by the way.
+    <br><br><br>
+    What did I cover yet? What am I talking about? Is it the haunted spectre? Or the communism? I can't tell. I'm gonna talk a little about myself at this point.
+    Like my nonexistent mindset. And stuff. Enough talking about me. Didn't I want to talk about languages? Or did I already? No idea. If not, I'll do it now.
+    Otherwise I'll do it anyways. But how do I know what's the case? <i>&raquo;IT DOESN'T MATTER, WE'RE ALL SCHIZOPHRENIC&laquo;</i> the haunted spectre once
+    said. Oh, never mind. That was me.
   </p>
 </div>
 
