reorganized static, added rickroll and more premium logic

--- a/paulhub/templates/_navigation.html
+++ b/paulhub/templates/_navigation.html
@@ -13,7 +13,7 @@
   <div class="container flex-row justify-horizontally">
 
     <a class="navbar-brand" href="/">
-      <img src="/static/paulhub_transparent.png" width="230" height="80" class="d-inline-block align-top" alt="PaulHub">
+      <img src="/static/images/paulhub_transparent.png" width="230" height="80" class="d-inline-block align-top" alt="PaulHub">
     </a>
 
     <style>
@@ -115,7 +115,7 @@
     }
     </style>
       <button id="myBtn" style="background-color: #242424; border: 1px solid #000000; border-radius: 4px;">
-          <img src="/static/menu.png" alt="Open Navigation Menu" width="40px" height="40px">
+          <img src="/static/images/menu.png" alt="Open Navigation Menu" width="40px" height="40px">
       </button>
     <!-- The Modal -->
     <div id="myModal" class="modal">
