--- a/paulhub/templates/pages/personal_stuff.html
+++ b/paulhub/templates/pages/personal_stuff.html
@@ -99,7 +99,7 @@ div.personal-stuff-table-img-div {
 </div>
 <div class='child inline-block-child float-right-child'>
   <br>
-  <img src="/static/gunther.png" alt="Hans Günter">
+  <img src="/static/images/gunther.png" alt="Hans Jürgen">
 </div>
 </div>
 
