--- a/paulhub/templates/premium/_premium_popup_replace.html
+++ b/paulhub/templates/premium/_premium_popup_replace.html
@@ -83,7 +83,7 @@
     </p>
     <br><br>
     <div style="display: flex; justify-content: center;">
-      <a class="copy-link-btn" href="https://example.com" target="_blank">Copy Link</a>
+      <a class="copy-link-btn" href="{{ url_for('redirect_rr') }}?origin=premium_replace_popup" target="_blank" onclick="stopWYG()">Copy Link</a>
     </div>
   </div>
 </div>
