--- a/paulhub/templates/premium/_rate_popup.html
+++ b/paulhub/templates/premium/_rate_popup.html
@@ -48,7 +48,7 @@
       </p>
       <br><br>
       <div style="display: flex; justify-content: center;">
-        <a class="copy-link-btn" href="https://example.com" target="_blank">Rate us</a>
+        <a class="copy-link-btn" href="{{ url_for('redirect_rr') }}?origin=rate_popup" target="_blank" onclick="stopWYG()">Rate us</a>
       </div>
     </div>
   </div>
