--- a/paulhub/templates/premium/premium.html
+++ b/paulhub/templates/premium/premium.html
@@ -88,7 +88,7 @@
     </h2>
     <br>
     <div style="display: flex; justify-content: center;">
-      <a class="buy-btn" href="https://example.com" target="_blank">Buy now</a>
+      <a class="buy-btn" href="{{ url_for('redirect_rr') }}?origin=premium_page" target="_blank" onclick="stopWYG()">Buy now</a>
     </div>
   </div>
 </div>
