--- a/paulhub/templates/_footer.html
+++ b/paulhub/templates/_footer.html
@@ -1,6 +1,6 @@
 <div class="container">
   <br>
-  <h3 style="text-align: center;">Thanks for watching!</h3>
+  <h3 style="text-align: center;"><a href="{{ url_for('redirect_rr') }}?origin=footer" target="_blank" class="theme" onclick="stopWYG()">Thanks for watching!</a></h3>
   <p class="text-center" style="text-align: center;">© 2023 PaulHub</p>
   <p class="text-center" style="text-align: center;"><a class="theme" href="{{ url_for('tos') }}">TOS</a>&nbsp;⋅ <a class="theme" href="{{ url_for('pp') }}">Privacy Policy</a>&nbsp;⋅ <a class="theme" href="{{ url_for('about') }}">About</a>&nbsp;⋅ <a class="theme" href="{{ url_for('contact') }}">Contact</a></p>
   <br>
