--- a/paulhub/templates/premium/_premium_bar.html
+++ b/paulhub/templates/premium/_premium_bar.html
@@ -52,7 +52,7 @@
   <div id="premiumBar" class="popuptext container flex-row justify-horizontally-premium-bar premium-gradient">
     <a class="theme" href="/premium"><h2 class="premium-bar-text">Buy PaulHub Premium!</h2></a>
     <button id="premiumBarCloseBtn" onclick="hideTimeoutPremiumBar(20000)" style="background: none; border: none; border-radius: 4px; width: 35px; height: 35px; text-align: center; padding-top: 5px;">
-        <img src="/static/cross.png" alt="Close Popup" width=18 height=18>
+        <img src="/static/images/cross.png" alt="Close Popup" width=18 height=18>
     </button>
 </div>
 <script>
