--- a/paulhub/templates/premium/_premium_bar_replace.html
+++ b/paulhub/templates/premium/_premium_bar_replace.html
@@ -52,7 +52,7 @@
   <div id="premiumBarReplace" class="popuptext container flex-row justify-horizontally-premium-bar-replace premium-bar-replace-gradient">
     <a class="theme" href="/premium"><h2 class="premium-bar-replace-text">Thanks for obtaining PaulHub Premium!</h2></a>
     <button id="premiumBarReplaceCloseBtn" onclick="hideTimeoutPremiumBarReplace(20000)" style="background: none; border: none; border-radius: 4px; width: 35px; height: 35px; text-align: center; padding-top: 5px;">
-        <img src="/static/cross.png" alt="Close Popup" width=18 height=18>
+        <img src="/static/images/cross.png" alt="Close Popup" width=18 height=18>
     </button>
 </div>
 <script>
