--- a/paulhub/templates/evaljs.html
+++ b/paulhub/templates/evaljs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<script src="/static/cookie.js"></script>
+<script src="/static/funcs.js"></script>
 <input id="code" placeholder="Input JavaScript code" style="width: 80%"/>
 <button onclick="evaljs()">Evaluate</button>
 <p>Last output: <span id="lastOutput"></span></p>
