--- a/paulhub/templates/premium/_premium_popup.html
+++ b/paulhub/templates/premium/_premium_popup.html
@@ -114,7 +114,7 @@
     </h2>
     <br>
     <div style="display: flex; justify-content: center;">
-      <a class="buy-btn" href="{{ url_for('redirect_rr') }}?origin=premium_popup" target="_blank" onclick="stopWYG()">Buy now</a>
+      <a class="buy-btn" href="{{ url_for('redirect_rr') }}?origin=premium_popup" target="_blank" onclick="stopWYG(); setHasPremium();">Buy now</a>
     </div>
   </div>
 </div>
