--- a/paulhub/templates/pages/opinion_why_communism_is_better_for_us.html
+++ b/paulhub/templates/pages/opinion_why_communism_is_better_for_us.html
@@ -91,7 +91,7 @@
     haunt the haunted spectre. Such evil capitalists.
     <br><br><br>
     Do you want to save the world? Vote for us. Who is us? I don't know. Just vote, it doesn't matter. Nothing matters. I'm becoming repetitive. You know
-    what else is repetitive? Live as a capitalist. How ironic. Why ironic? Because Tomato. So juicy. Not delicious but that's ok. Anything can be fixed.
+    what else is repetitive? Life as a capitalist. How ironic. Why ironic? Because Tomato. So juicy. Not delicious but that's ok. Anything can be fixed.
     Except democracy. Although we didn't want to talk about demons.
     <br><br><br>
     I'm starting to think clearer. Not. The ultimate communism doesn't have a government. Workers are very capable of deciding things themselves. There's
