finished manifest for december

--- a/paulhub/templates/pages/opinion_why_communism_is_better_for_us.html
+++ b/paulhub/templates/pages/opinion_why_communism_is_better_for_us.html
@@ -12,7 +12,7 @@
 </p>
 <br>
 <div class="solo-text">
-  <p style="text-align: justify; line-height: 1.3">
+  <p class="not-selectable" style="text-align: justify; line-height: 1.3;">
     A spectre goes around in Europe. The spectre of communism. Poor spectre, nobody likes it. It is very sad and depressed. Due to sadness and depression,
     the spectre wants to die by fall damage. However, it doesn't take any. How unfortunate. Talking about fortune, the spectre doesn't know what that means.
     Enough talking about fortune. Fact is, that every bad government decision is democracy's fault. Stop! Don't talk about demo(n)s, the spectre is being
@@ -113,7 +113,10 @@
     Like my nonexistent mindset. And stuff. Enough talking about me. Didn't I want to talk about languages? Or did I already? No idea. If not, I'll do it now.
     Otherwise I'll do it anyways. But how do I know what's the case? <i>&raquo;IT DOESN'T MATTER, WE'RE ALL SCHIZOPHRENIC&laquo;</i> the haunted spectre once
     said. Oh, never mind. That was me.
+    <br><br><br><br><br>
   </p>
+  <p style="font-size: 22px;">To be continued...</p>
+  <p style="font-size: 18px;">If you want to continue reading, come back next month!</p>
 </div>
 
 {% endblock content %}
