--- a/paulhub/templates/premium/_premium_popup_replace.html
+++ b/paulhub/templates/premium/_premium_popup_replace.html
@@ -35,6 +35,7 @@
     font-size: 42px;
     background: linear-gradient(270deg, rgba(0,134,255,1) 0%, rgba(192,0,255,1) 50%, rgba(255,209,0,1) 100%);
     background-clip: text;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-align: center;
   }
