--- a/paulhub/templates/premium/premium.html
+++ b/paulhub/templates/premium/premium.html
@@ -38,6 +38,7 @@
     font-size: 42px;
     background: linear-gradient(270deg, rgba(0,134,255,1) 0%, rgba(192,0,255,1) 50%, rgba(255,209,0,1) 100%);
     background-clip: text;
+    -webkit-background-clip: text;
   }
   p.premium-checkmarks {
     font-size: 22px;
