added search engine and sm meta data

--- a/paulhub/templates/base.html
+++ b/paulhub/templates/base.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="keywords" content="paulhub communism cool">
+  <meta name="description" content="PaulHub - A site with many cool guides and articles about lots of weird stuff. Check it out!">
+  <meta property="og:title" content="PaulHub">
+  <meta property="og:description" content="A site with many cool guides and articles about lots of weird stuff. Check it out!">
+  <meta property="og:url" content="https://xxxxxxxx.xxxxx">
   <link href="/static/css/dark-theme.css" rel="stylesheet" id="dark-theme-link">
   <link href="/static/css/style.css" rel="stylesheet" id="style-link">
   <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
