--- a/paulhub/static/css/dark-theme.css
+++ b/paulhub/static/css/dark-theme.css
@@ -66,3 +66,6 @@ div.premium-replace-div {
 div.rate-us-div {
   background-color: rgb(30, 30, 30);
 }
+.grey-box {
+  border-color: rgb(20, 20, 20);
+}
