--- a/paulhub/templates/pages/mothsoc1.html
+++ b/paulhub/templates/pages/mothsoc1.html
@@ -116,7 +116,8 @@
     <br><br><br><br><br>
   </p>
   <p style="font-size: 22px;">To be continued...</p>
-  <p style="font-size: 18px;">If you want to continue reading, come back next month!</p>
+  <br><br><br><br><br>
+  {% include "pages/_manifest_links.html" %}
 </div>
 
 {% endblock content %}
