--- a/paulhub/templates/pages/how_to_furry.html
+++ b/paulhub/templates/pages/how_to_furry.html
@@ -21,7 +21,7 @@
         <li>• Play Stardew Valley</li>
     </ul>
     <p>
-        Now, what do all these things have in common? I am doing/using them!
+        Now, what do all these things have in common? I am doing/using all of them!
         <br><br><br>
         PS: There's no privacy without Furrys.
     </p>
