--- a/paulhub/templates/pages/_mothsoc3_de.html
+++ b/paulhub/templates/pages/_mothsoc3_de.html
@@ -33,3 +33,4 @@ nudeligen Anhängseln und verwandelte Wasser in Bier.
 <a href="https://www.spaghettimonster.org">www.spaghettimonster.org</a>
 <br><br><br><br>
 * elias.gq wird eventuell bald offline genommen.
+Update: elias.gq wurde temporär nach https://elias-ebz3.onrender.com/ verschoben.
