--- a/paulhub/templates/pages/_mothsoc3_en.html
+++ b/paulhub/templates/pages/_mothsoc3_en.html
@@ -32,3 +32,4 @@ showed itself to the merchant. IT touched all of them wit ITS noodly appendages 
 <a href="https://www.spaghettimonster.org">www.spaghettimonster.org</a>
 <br><br><br><br>
 * elias.gq might be taken offline in the near future.
+Update: elias.gq now temporarily resides at https://elias-ebz3.onrender.com/.
