--- a/paulhub/templates/pages/how_to_furry.html
+++ b/paulhub/templates/pages/how_to_furry.html
@@ -28,5 +28,6 @@
     <img src="/static/images/privacy_furry.png" style="border-radius: 10px;">
     <br><br><br><br><br><br><br>
 </div>
+<span id="doNotAddHeight"></span>
 
 {% endblock content %}
